Fix multiple vote display alignment

--- a/src/components/track/track.css
+++ b/src/components/track/track.css
@@ -59,18 +59,28 @@
 }
 
 .votes {
-	margin-left: auto;
-	margin-right: 0.5rem;
+	display: flex;
+	flex-direction: row-reverse;
+	margin: 0.5rem 0.5rem 0.5rem auto;
+	opacity: 0.6;
+}
+
+.votes:hover {
+	opacity: 1;
 }
 
 .votesHero {
-	margin: 0.5rem 0 0 auto;
+	margin: 0.7rem auto 0 0;
+	display: flex;
+	float: left;
+	flex-direction: row-reverse;
 }
 
 .avatarContainer {
 	display: inline-block;
-	opacity: 0.7;
-	transform: scale(0.66);
+	opacity: 1;
+	margin-right: -1.2rem;
+	transform: scale(0.75);
 }
 
 .avatarContainerHero {
